--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <header>
         <div class="logo">            
-            <a href="#home"><img src="Asset/logo.svg"></a>
+            <a href="#home"><img src="Asset/Logo.svg"></a>
         </div>
         <ul>
             <li><a href="#home">Home</a></li>
@@ -131,7 +131,7 @@
                     <p>Fresh graduated from Computer Engineering at Diponegoro University</p>
                     <ul class="fourth-social">
                         <li><a href="https://www.instagram.com/aswin_bahar9/"><i class="fab fa-facebook-f"></i></a></li>
-                        <li><a href="http://aswinbahar.id"><i class="fab fa-globe"></i></a></li>
+                        <li><a href="http://aswinbahar.id"><i class="fab fa-twitter"></i></a></li>
                         <li><a href="https://www.facebook.com/aswinbaharsetiawan/"><i class="fab fa-instagram"></i></a></li>
                     </ul>
                 </div>
@@ -212,7 +212,7 @@
                         <path class="cls-1" d="M135,666H420c-15.76,12-67.52,48.16-143,48C202.14,713.84,150.83,678,135,666Z" transform="translate(-135 -666)"/>
                     </svg>
                     <i class="fas fa-sort-down"></i>
-                    <p>I'm a college student at Budi Luhur University, I'm beginner at front-end web developer and very excited to learn it.</p>
+                    <p>College student at Budi Luhur University</p>
                     <ul class="fourth-social">
                         <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
                         <li><a href="#"><i class="fab fa-twitter"></i></a></li>
@@ -243,7 +243,7 @@
 
     <footer>
         <div class="footer-list">
-            <a href="#home"><img src="Asset/logo.svg"></a>
+            <a href="#home"><img src="Asset/Logo.svg"></a>
         </div>
     </footer>
 </body>
